Archive2/5d/1173c2ab56317e/output
main.cpp: In function 'int main()':
main.cpp:38:41: error: cannot convert 'const _1_type {aka const boost::phoenix::actor<boost::spirit::argument<0> >}' to 'int' in initialization
     > int_rule_ = int_[_val = new int(_1)];
                                         ^
